# Study_c_cpp

./: README.md
Universidad_C++ (Udemy)/prueba/: main.cpp  operacion.cpp  operacion.hpp
c++ moderno/: 01_ej01.cpp  01_ej02.cpp
chrono/: build_run_last.sh  chrono_10_datetime.cpp  chrono_1_duration.cpp  chrono_2_1_timepoint.cpp  chrono_2_timepoint.cpp  chrono_3_system_clock.cpp  chrono_4_steady_highres.cpp  chrono_5_cast.cpp  chrono_6_literals.cpp  chrono_7_sleep.cpp  chrono_8_stopwatch.cpp  chrono_9_timer_loop.cpp  chrono_test_1_10.cpp
cuda/: 01_test_cuda.cpp  02_test_kernel.cpp
cuda_shared_pointer/: README.md
cuda_shared_pointer/cuMemExport/01_counter/: CMakeLists.txt  contador_vmm.cpp  leer_vmm.py  shared.h
cuda_shared_pointer/cuMemExport__obsolete/01_counter/: README.md  leer_vmm.py
cuda_shared_pointer/cudaHostAlloc/: README.md
cuda_shared_pointer/cudaHostAlloc/01_counter/: CMakeLists.txt  README.md  contador.cpp  leer.py
cuda_shared_pointer/cudaHostAlloc/02_counter_sync/: CMakeLists.txt  README.md  contador.cpp  leer.py
cuda_shared_pointer/cudaMallocManaged/01_counter/: CMakeLists.txt  contador.cpp  leer.py  shared.h
cuda_shared_pointer/cudaMallocManaged__obsolete/01_counter/: CMakeLists.txt  contador.cpp
opencv/: CMakeLists.txt  get_samples.sh
opencv/src/: 01_load_image.cpp  02_canvas_images.cpp  03_filtros_images.cpp  04_draw_text.cpp
punteros/: 05_ptr.cpp  06_ptr.cpp
rtsp/: CMakeLists.txt
rtsp/src/: rtsp_main.cpp  rtsp_sub.cpp
study_gpt/c++ moderno/: 01_base.cpp  01_ej03.cpp  01_inicializacion.cpp  02_auto.cpp
study_gpt/punteros/: 01_ptr.cpp  02_ptr.cpp  03_ptr.cpp  04_ptr.cpp
study_gpt/referencias/: 01_basic.cpp
templates/: 01_example.cpp  01_funciones.cpp  02_clases.cpp  02_example.cpp  03_valores.cpp  04_especializacion.cpp  05_advanced.cpp  06_tipo_valor.cpp  07_traits_sensor.cpp  08_sensor_array.cpp  09_policy_filter.cpp  10_signal_pipeline.cpp  build_run_templates.sh
vector/: 01_vector_basico.cpp  02_vector_modificar.cpp  03_vector_iteradores.cpp  04_vector_avanzado.cpp  05_vector_objetos.cpp  build_run.sh
